@@ -19,27 +19,47 @@ to point to the installation directory.
 
 EasyABC supports both FluidSynth 2 and the mediaplayer from wxPython, but most users report problems with the wxPython player.
 
-We have tested EasyABC on Linux Mint 20 using Virtual Box 6.1
+We have tested EasyABC on Linux Mint 20 using Virtual Box 6.1 and on a Raspberry Pi
 The steps we had to do are as follows:
 
-sudo apt install abcmidi abcm2ps libfluidsynth2 fluid-soundfont-gm
-
-sudo apt install python3-wxgtk4.0 python3-wxgtk-media4.0 python-wxtools python3-pygame
+sudo apt install abcmidi abcm2ps fluid-soundfont-gm python3-wxgtk4.0
 
 unzip Downloads/EasyABC-master.zip
 mv EasyABC-master/ EasyABC
-cd EasyABC
 
-Now you can run EasyABC:
+sudo apt install libfluidsynth2
+
+If that fails because the package does not exist yet then download the source code from:
+https://github.com/FluidSynth/fluidsynth/releases
+
+tar -xvzf Downloads/fluidsynth-2.2.3.tar.gz
+cd fluidsynth-2.2.3/
+mkdir build
+cd build
+sudo apt install cmake libgtk2.0-dev libpulse-dev
+cmake ..
+make libfluidsynth
+cp src/libfluidsynth.so* ~/EasyABC
+
+cd ~/EasyABC
 python3 easy_abc.py
 
-(If you get a GStreamer error it means that FluidSynth failed to initialize. Then either FluidSynth library or SoundFont can not be found.)
+(If you get a GStreamer or wx.media error it means that FluidSynth failed to initialize. Then either FluidSynth library or SoundFont can not be found.)
 
 Then choose a soundfont in Settings -> ABC Settings -> File Settings -> soundfont
 You can find one here: /usr/share/sounds/sf2/FluidR3_GM.sf2
 
 Now exit and run EasyABC again to use FluidSynth as the mediaplayer.
 
+
+Some packages are not really needed:
+If you want to use the wxPython mediaplayer instead of FluidSynth:
+
+        sudo apt install python3-wxgtk-media4.0
+
+If you want to use MIDI recording:
+
+        sudo apt install python-wxtools python3-pygame
 
 --------------------------------------------------------
 Running EasyABC
