@@ -595,5 +595,7 @@ different panes. Tie/untie option added for notes. Broken rhythm
 - Update to abc2xml version 233
 - Chinese translation added (thanks Wu Xiaotian)
 - ABC settings: appears slightly faster and some space was added between controls and the border
-
+- Removed 'Insert musical symbol' from the menu and the toolbar.
+  On Linux (Gnome) these menus were empty and ABC Assist does a better job of inserting symbols
+- Fixed sliders on toolbar (Linux, Raspberry Pi)
 
